--- a/newTab.html
+++ b/newTab.html
@@ -65,6 +65,10 @@
       </div>
     </div>
 
+    <div id="speech-bubble" class="speech-bubble hidden">
+      <p></p>
+    </div>
+
     <script src="scripts/Sortable.min.js"></script>
     <script src="newTab.js"></script>
   </body>
