--- a/newTab.html
+++ b/newTab.html
@@ -51,7 +51,7 @@
       <span class="reset-icon">+</span>
     </button>
 
-    <!-- Confirmation Modal -->
+    <!-- Reset Modal -->
     <div id="reset-modal" class="hidden">
       <div class="modal-content">
         <p>
@@ -63,6 +63,19 @@
           <button id="reset-no">No</button>
         </div>
       </div>
+    </div>
+
+    <!-- Mood Selector -->
+    <div id="mood-box" class="mood-box">
+      <div class="mood-header">Today's Mood</div>
+      <div class="mood-options">
+        <button class="mood-button" data-mood="happy">😊</button>
+        <button class="mood-button" data-mood="neutral">😐</button>
+        <button class="mood-button" data-mood="stressed">😓</button>
+        <button class="mood-button" data-mood="energetic">⚡</button>
+        <button class="mood-button" data-mood="tired">😴</button>
+      </div>
+      <div class="mood-status">How are you feeling?</div>
     </div>
 
     <script src="scripts/Sortable.min.js"></script>
